--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <p>© 토이퐁당 TOYPONGDANG 2020. All Rights Reserved. </p>
                 <ul id="moreInfo" class="list-inline d-flex justify-content-center">
                     <li class="list-inline-item">
-                        <a href="https://athletics-face.site/privacy.html">Privacy</a>
+                        <a href="https://athleticsface.netlify.app/privacy.html">Privacy</a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://www.youtube.com/channel/UCN0jZ3rHqnlklXbqTyTYb-Q/">About</a>
