--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" id="yotube-top-link" href="https://www.youtube.com/channel/UCN0jZ3rHqnlklXbqTyTYb-Q/">토이퐁당 유튜브 채널</a>
                 </li>
                 <li id="goToBlog" class="nav-item active">
-                    <a class="nav-link" href="https://backtothe30.com">
+                    <a class="nav-link" href="">
                         블로그
                     </a>
                 </li>
